# rusty-chat

./: .gitignore  Cargo.toml  flake.nix  schema.surql
client/: Cargo.toml  run_client.sh
client/src/: main.rs
server/: Cargo.toml  run_server.sh
server/src/: main.rs
src/: main.rs
